Use digits 3/4 for "three fourths"

--- a/tex/p141.tex
+++ b/tex/p141.tex
@@ -7,7 +7,7 @@
 \vs p141 1:2 The first day Jesus and the apostles only journeyed as far as Tarichea, where they rested for the night. The next day they travelled to a point on the Jordan near Pella where John had preached about one year before, and where Jesus had received baptism. Here they tarried for more than two weeks, teaching and preaching. By the end of the first week several hundred people had assembled in a camp near where Jesus and the 12 dwelt, and they had come from Galilee, Phoenicia, Syria, the Decapolis, Perea, and Judea.
 \vs p141 1:3 Jesus did no public preaching. Andrew divided the multitude and assigned the preachers for the forenoon and afternoon assemblies; after the evening meal Jesus talked with the 12. He taught them nothing new but reviewed his former teaching and answered their many questions. On one of these evenings he told the 12 something about the 40 days which he spent in the hills near this place.
 \vs p141 1:4 Many of those who came from Perea and Judea had been baptized by John and were interested in finding out more about Jesus’ teachings. The apostles made much progress in teaching the disciples of John inasmuch as they did not in any way detract from John’s preaching, and since they did not at this time even baptize their new disciples. But it was always a stumbling stone to John’s followers that Jesus, if he were all that John had announced, did nothing to get him out of prison. John’s disciples never could understand why Jesus did not prevent the cruel death of their beloved leader.
-\vs p141 1:5 From night to night Andrew carefully instructed his fellow apostles in the delicate and difficult task of getting along smoothly with the followers of John the Baptist. During this first year of Jesus’ public ministry more than three fourths of his followers had previously followed John and had received his baptism. This entire year of A.D.\,27 was spent in quietly taking over John’s work in Perea and Judea.
+\vs p141 1:5 From night to night Andrew carefully instructed his fellow apostles in the delicate and difficult task of getting along smoothly with the followers of John the Baptist. During this first year of Jesus’ public ministry more than \bibfrac{3}{4} of his followers had previously followed John and had received his baptism. This entire year of A.D.\,27 was spent in quietly taking over John’s work in Perea and Judea.
 \usection{2.\bibnobreakspace God’s Law and the Father’s Will}
 \vs p141 2:1 The night before they left Pella, Jesus gave the apostles some further instruction with regard to the new kingdom. Said the Master: \textcolour{ubdarkred}{“You have been taught to look for the coming of the kingdom of God, and now I come announcing that this long\hyp{}looked\hyp{}for kingdom is near at hand, even that it is already here and in our midst. In every kingdom there must be a king seated upon his throne and decreeing the laws of the realm. And so have you developed a concept of the kingdom of heaven as a glorified rule of the Jewish people over all the peoples of the earth with Messiah sitting on David’s throne and from this place of miraculous power promulgating the laws of all the world. But, my children, you see not with the eye of faith, and you hear not with the understanding of the spirit. I declare that the kingdom of heaven is the realization and acknowledgement of God’s rule within the hearts of men. True, there is a King in this kingdom, and that King is my Father and your Father. We are indeed his loyal subjects, but far transcending that fact is the transforming truth that we are his \bibemph{sons.} In my life this truth is to become manifest to all. Our Father also sits upon a throne, but not one made with hands. The throne of the Infinite is the eternal dwelling place of the Father in the heaven of heavens; he fills all things and proclaims his laws to universes upon universes. And the Father also rules within the hearts of his children on earth by the spirit which he has sent to live within the souls of mortal men.}
 \vs p141 2:2 \textcolour{ubdarkred}{“When you are the subjects of this kingdom, you indeed are made to hear the law of the Universe Ruler; but when, because of the gospel of the kingdom which I have come to declare, you faith\hyp{}discover yourselves as sons, you henceforth look not upon yourselves as law\hyp{}subject creatures of an all\hyp{}powerful king but as privileged sons of a loving and divine Father. Verily, verily, I say to you, when the Father’s will is your \bibemph{law,} you are hardly in the kingdom. But when the Father’s will becomes truly your \bibemph{will,} then are you in very truth in the kingdom because the kingdom has thereby become an established experience in you. When God’s will is your law, you are noble slave subjects; but when you believe in this new gospel of divine sonship, my Father’s will becomes your will, and you are elevated to the high position of the free children of God, liberated sons of the kingdom.”}
