Tidy up the title.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -18,9 +18,9 @@
 \begin{center}
 {
 \bibcovertitlefont
-\tunemarkup{pgkindledx}{\fontsize{18.2}{32}\selectfont}
+\tunemarkup{pgkindledx}{\fontsize{20.8}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{12.8}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
@@ -29,18 +29,12 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
-{\itshape OF}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{17}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{18.5}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{20}{20}\selectfont}
-\urantiabook\\
-\tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
+{\itshape OF}\\
+\tunemarkup{pgkindledx}{\fontsize{16.2}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{11.8}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{11}{20}\selectfont}
+\tunemarkup{pgnexus7}{\fontsize{10.6}{20}\selectfont}
 {\itshape THE FIFTH EPOCHAL REVELATION}\\
 }%
 {%
@@ -70,7 +64,7 @@ Edited by Tigran Aivazian\\[2ex]
 
 \newpage
 
-\newcommand{\serpimolot}{{\fontspec{Mortbats} K}}
+%\newcommand{\serpimolot}{{\fontspec{Mortbats} K}}
 
 \begin{center}
 \vspace*{\stretch{0.3}}
@@ -80,13 +74,13 @@ Edited by Tigran Aivazian\\[2ex]
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \parbox{0.9\linewidth}{\centering
-\textbf{\upshape\nocopyright\ No copyright is claimed on this book \serpimolot\\
+\textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
 The text of the Urantia Papers is in the public domain}.\\[5pt]
-\tunemarkuptwo{nofnt}{}{Cover design by Gary Tonge, www.vision-afar.com.\\}
+\tunemarkuptwo{coverimage}{Cover design by Gary Tonge, www.vision-afar.com.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
-\tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\}
+\tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition.\\}
 The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{The asterisk * indicates a study note other than a textual variant.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
 Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
