--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -58,7 +58,7 @@
 %\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
-\tunemarkuptag{coverimage}
+%\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
 %\tunemarkuptag{noquiz}
