Shorten the Introduction a bit.

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -15,11 +15,9 @@ INTRODUCTION
 \tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{18.5}{22}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{17}{21}\selectfont}
 
-\bibemph{The British Study Edition of The Urantia Papers} is a translation of the Fifth Epochal Revelation (also known as ``The Urantia Book'')
-from American to British English as defined by the \bibemph{Oxford Dictionary of English}.
-It has the following main features:
+\bibemph{The British Study Edition of The Fifth Epochal Revelation} has the following main features:
 
 \begin{itemize}
 \item The Standard Reference Text (SRT) has been used as a base of this translation.
