--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -3367,10 +3367,10 @@
 
 \qstart{Since what event do the Urantia mortals may proceed directly to the morontia spheres after death?}
 {Pentecost}{1}
-{Jesus's birth}{0}
-{Jesus's crucifixion}{0}
-{Jesus's resurrection}{0}
-{Jesus's baptism}{0}
+{Jesus' birth}{0}
+{Jesus' crucifixion}{0}
+{Jesus' resurrection}{0}
+{Jesus' baptism}{0}
 \qstop
 
 \qpaper{53}{The Lucifer Rebellion}
@@ -5148,7 +5148,7 @@
 {no}{0}
 \qstop
 
-\qstart{Who did Jesus's Thought Adjuster previously indwell?}
+\qstart{Who did Jesus' Thought Adjuster previously indwell?}
 {Machiventa Melchizedek}{1}
 {Abraham}{0}
 {No-one}{0}
@@ -5777,7 +5777,7 @@
 
 \qpaper{138}{Training the Kingdom’s Messengers}
 
-\qstart{How many of Jesus's apostles were fishermen?}
+\qstart{How many of Jesus' apostles were fishermen?}
 {none}{0}
 {3}{0}
 {6--7}{1}
@@ -6136,7 +6136,7 @@
 {In his vanishing consciousness he was reciting Psalm 22}{1}
 \qstop
 
-\qstart{Give the time of Jesus's arrest and the time his so-called ``trial'' ended?}
+\qstart{Give the time of Jesus' arrest and the time his so-called ``trial'' ended?}
 {03:30 and 08:00}{1}
 {06:00 and 12:00}{0}
 {09:00 and 12:00}{0}
@@ -6183,9 +6183,9 @@
 {Annas \&\ Caiaphas. ``He said he is the King of the Jews''. In Hebrew}{0}
 \qstop
 
-\qstart{Which of these were at the foot of Jesus's cross during crucifixion?}
-{Jude, Jesus's brother}{1}
-{Ruth, Jesus's sister}{1}
+\qstart{Which of these were at the foot of Jesus' cross during crucifixion?}
+{Jude, Jesus' brother}{1}
+{Ruth, Jesus' sister}{1}
 {Mary Magdalene}{1}
 {Rebecca}{1}
 {John}{1}
