Use Arno Pro's builtin Greek glyphs

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1012,15 +1012,15 @@
 }%
 }
 
-\newfontfamily\greekfont[Mapping=tex-text]{Galatia SIL}
+%\newfontfamily\greekfont[Mapping=tex-text]{Galatia SIL}
 %\newfontfamily\greekfont[Mapping=tex-text]{SBL Greek}
 %\newfontfamily\greekfont[Mapping=tex-text]{Minion Pro}
 \newfontfamily\hebrewfont[Mapping=tex-text,Script=Hebrew]{Ezra SIL}
 \newfontfamily\armfont[Mapping=tex-text,Script=Armenian]{ArTarumianGrqiBardzr_U}
 \newcommand{\textheb}[1]{{\hebrewfont#1}}
 \newcommand{\textarm}[1]{{\armfont#1}}
-\newcommand{\textgreek}[1]{{\greekfont#1}}
-%\newcommand{\textgreek}[1]{#1}
+%\newcommand{\textgreek}[1]{{\greekfont#1}}
+\newcommand{\textgreek}[1]{#1}
 
 \def\ackn{Acknowledgement}
 \def\continuedtxt{(continued)}
