--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,3 +1,4 @@
+\newpage
 \thispagestyle{empty}
 \bibmark{book}{INTRODUCTION}
 \fancyhead[C]{\bibheadfont INTRODUCTION}
@@ -27,7 +28,7 @@ INTRODUCTION
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'', a more compact form of ``75\%'' was chosen. Likewise, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
 \item The designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
-\item SRT paragraph numbering is used both in the superscript and in the paragraph ranges printed in the head\-er of every page.
+\item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
 \item Possible textual corruptions are indicated in the footnotes.
 \end{itemize}
 
