Tidy up Introduction's font size for the 5in build.

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -13,7 +13,7 @@ INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{17.4}{19.5}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{17}{21}\selectfont}
@@ -27,7 +27,7 @@ INTRODUCTION
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'' a more compact form of ``75\%'' was chosen. Similarly, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
-\item The designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
+\item Designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
 \item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
 \item Possible textual corruptions are indicated in the footnotes.
 \end{itemize}
