Make Arno Pro default typeface

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -20,12 +20,12 @@
 %\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
-\tunemarkuptag{academy}
+%\tunemarkuptag{academy}
 %\tunemarkuptag{palatino}
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-%\tunemarkuptag{arno}
+\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
 %\tunemarkuptag{agora}
