Remove irrelevant information note at 168:3.7

--- a/tex/p168.tex
+++ b/tex/p168.tex
@@ -46,7 +46,7 @@
 \vs p168 3:4 The following week Lazarus and his sisters were summoned to appear before the Sanhedrin. When their testimony had been heard, no doubt could be entertained that Lazarus had been raised from the dead. Though the transactions of the Sanhedrin virtually admitted the resurrection of Lazarus, the record carried a resolution attributing this and all other wonders worked by Jesus to the power of the prince of devils, with whom Jesus was declared to be in league.
 \vs p168 3:5 No matter what the source of his wonder\hyp{}working power, these Jewish leaders were persuaded that, if he were not immediately stopped, very soon all the common people would believe in him; and further, that serious complications with the Roman authorities would arise since so many of his believers regarded him as the Messiah, Israel’s deliverer.
 \vs p168 3:6 It was at this same meeting of the Sanhedrin that Caiaphas the high priest first gave expression to that old Jewish adage, which he so many times repeated: “It is better that one man die, than that the community perish.”
-\vs p168 3:7 Although Jesus had received warning of the doings of the Sanhedrin on this dark Friday afternoon, he was not in the least perturbed and continued resting over the Sabbath with friends in Bethpage, a hamlet near Bethany. Early Sunday morning Jesus and the apostles assembled, by prearrangement, at the home of Lazarus, and taking leave of the Bethany family, they started on their journey back to the Pella encampment.\fnc{ \bibexpl{Informational: first printing \ldots{}Bethphage\ldots{}; --- The 1955 text uses Bethpage in all 13 occurrences of this word. In the 4\ts{th} printing, the original was changed to Bethphage here, and at ten other locations; the remaining two were changed in the 9\ts{th} printing. These changes were presumably made because Bethphage is the spelling found in English Bibles since the Authorized Version (King James) of 1611. While the apparent misspelling in The Urantia Book is not theologically or historically significant, it seems unlikely to the committee that so many identical typographical errors could have occurred, so the spelling “Bethpage” must have been used in the original manuscript. The committee made its decision to retain the original form based on three factors: 1) It is the only form found in the text of the UB itself; 2)The form is a reasonably accurate transliteration of the sound of the original; and 3) Though the form found in the UB is uncommon, it is not unique --- the spelling having been found in numerous texts pre-dating the UB and in various references down to the present day including a number on the Web.}}
+\vs p168 3:7 Although Jesus had received warning of the doings of the Sanhedrin on this dark Friday afternoon, he was not in the least perturbed and continued resting over the Sabbath with friends in Bethpage, a hamlet near Bethany. Early Sunday morning Jesus and the apostles assembled, by prearrangement, at the home of Lazarus, and taking leave of the Bethany family, they started on their journey back to the Pella encampment.
 \usection{4.\bibnobreakspace The Answer to Prayer}
 \vs p168 4:1 On the way from Bethany to Pella the apostles asked Jesus many questions, all of which the Master freely answered except those involving the details of the resurrection of the dead. Such problems were beyond the comprehension capacity of his apostles; therefore did the Master decline to discuss these questions with them. Since they had departed from Bethany in secret, they were alone. Jesus therefore embraced the opportunity to say many things to the ten which he thought would prepare them for the trying days just ahead.
 \vs p168 4:2 The apostles were much stirred up in their minds and spent considerable time discussing their recent experiences as they were related to prayer and its answering. They all recalled Jesus’ statement to the Bethany messenger at Philadelphia, when he said plainly, \textcolour{ubdarkred}{“This sickness is not really to the death.”} And yet, in spite of this promise, Lazarus actually died. All that day, again and again, they reverted to the discussion of this question of the answer to prayer.
