Use the same number style in the enumeration of number of planets

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -21,8 +21,8 @@
 \vs p015 2:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Superuniverse.} 10 major sectors (about $10^{12}$ inhabitable planets) constitute a superuniverse. Each superuniverse is provided with an enormous and glorious headquarters world and is ruled by three Ancients of Days.
 \vs p015 2:9 \ublistelem{7.}\bibnobreakspace \bibemph{The Grand Universe.} Seven superuniverses make up the present organized grand universe, consisting of approximately seven trillion inhabitable worlds plus the architectural spheres and the one billion inhabited spheres of Havona. The superuniverses are ruled and administered indirectly and reflectively from Paradise by the Seven Master Spirits. The billion worlds of Havona are directly administered by the Eternals of Days, one such Supreme Trinity Personality presiding over each of these perfect spheres.
 \vs p015 2:10 \pc Excluding the Paradise\hyp{}Havona spheres, the plan of universe organization provides for the following units:
-\vs p015 2:11 Superuniverses\bibdf\makebox[4em][l]{7}
-\vs p015 2:12 Major sectors\bibdf\makebox[4em][l]{70}
+\vs p015 2:11 Superuniverses\bibdf\makebox[4em][l]{$7$}
+\vs p015 2:12 Major sectors\bibdf\makebox[4em][l]{$70$}
 \vs p015 2:13 Minor sectors\bibdf\makebox[4em][l]{$7 \times 10^3$}
 \vs p015 2:14 Local universes\bibdf\makebox[4em][l]{$7 \times 10^5$}
 \vs p015 2:15 Constellations\bibdf\makebox[4em][l]{$7 \times 10^7$}
