Remove a couple of unnecessary footnotes.

--- a/tex/p184.tex
+++ b/tex/p184.tex
@@ -28,7 +28,7 @@
 \vs p184 2:12 Having taken the first step along the path of compromise and least resistance, there was nothing apparent to Peter but to go on with the course of conduct decided upon. It requires a great and noble character, having started out wrong, to turn about and go right. All too often one’s own mind tends to justify continuance in the path of error when once it is entered upon.
 \vs p184 2:13 Peter never fully believed that he could be forgiven until he met his Master after the resurrection and saw that he was received just as before the experiences of this tragic night of the denials.
 \usection{3.\bibnobreakspace Before the Court of Sanhedrists}
-\vs p184 3:1 It was about 15:30 this Friday morning when the chief priest, Caiaphas, called the Sanhedrist court of inquiry to order and asked that Jesus be brought before them for his formal trial. On three previous occasions the Sanhedrin, by a large majority vote, had decreed the death of Jesus, had decided that he was worthy of death on informal charges of lawbreaking, blasphemy, and flouting the traditions of the fathers of Israel.\fnc{\ldots{}on informal charges of \bibtextul{law-breaking,} blasphemy\ldots{} \bibexpl{Of the five occurrences of lawbreak[er] [-ing] in the text, three are closed and two are hyphenated. There is no differential in meaning indicated by the two forms, so text standardization could be appropriate.}}
+\vs p184 3:1 It was about 15:30 this Friday morning when the chief priest, Caiaphas, called the Sanhedrist court of inquiry to order and asked that Jesus be brought before them for his formal trial. On three previous occasions the Sanhedrin, by a large majority vote, had decreed the death of Jesus, had decided that he was worthy of death on informal charges of lawbreaking, blasphemy, and flouting the traditions of the fathers of Israel.
 \vs p184 3:2 This was not a regularly called meeting of the Sanhedrin and was not held in the usual place, the chamber of hewn stone in the temple. This was a special trial court of some 30 Sanhedrists and was convened in the palace of the high priest. John Zebedee was present with Jesus throughout this so\hyp{}called trial.
 \vs p184 3:3 How these chief priests, scribes, Sadducees, and some of the Pharisees flattered themselves that Jesus, the disturber of their position and the challenger of their authority, was now securely in their hands! And they were resolved that he should never live to escape their vengeful clutches.
 \vs p184 3:4 Ordinarily, the Jews, when trying a man on a capital charge, proceeded with great caution and provided every safeguard of fairness in the selection of witnesses and the entire conduct of the trial. But on this occasion, Caiaphas was more of a prosecutor than an unbiased judge.
@@ -42,7 +42,7 @@
 \vs p184 3:12 \ublistelem{3.}\bibnobreakspace That he taught magic inasmuch as he promised to build a new temple, and that without hands.
 \vs p184 3:13 \pc Already had the full Sanhedrin agreed that Jesus was guilty of death\hyp{}deserving transgressions of the Jewish laws, but they were now more concerned with developing charges regarding his conduct and teachings which would justify Pilate in pronouncing the death sentence upon their prisoner. They knew that they must secure the consent of the Roman governor before Jesus could legally be put to death. And Annas was minded to proceed along the line of making it appear that Jesus was a dangerous teacher to be abroad among the people.
 \vs p184 3:14 But Caiaphas could not longer endure the sight of the Master standing there in perfect composure and unbroken silence. He thought he knew at least one way in which the prisoner might be induced to speak. Accordingly, he rushed over to the side of Jesus and, shaking his accusing finger in the Master’s face, said: “I adjure you, in the name of the living God, that you tell us whether you are the Deliverer, the Son of God.” Jesus answered Caiaphas: \textcolour{ubdarkred}{“I am. Soon I go to the Father, and presently shall the Son of Man be clothed with power and once more reign over the hosts of heaven.”}
-\vs p184 3:15 When the high priest heard Jesus utter these words, he was exceedingly angry, and rending his outer garments, he exclaimed: “What further need have we of witnesses? Behold, now have you all heard this man’s blasphemy. What do you now think should be done with this lawbreaker and blasphemer?” And they all answered in unison, “He is worthy of death; let him be crucified.”\fnc{\ldots{}be done with this \bibtextul{law-breaker} and blasphemer\ldots{} \bibexpl{See note for \bibref[184:3.1]{p0184 3:1}.}}
+\vs p184 3:15 When the high priest heard Jesus utter these words, he was exceedingly angry, and rending his outer garments, he exclaimed: “What further need have we of witnesses? Behold, now have you all heard this man’s blasphemy. What do you now think should be done with this lawbreaker and blasphemer?” And they all answered in unison, “He is worthy of death; let him be crucified.”
 \vs p184 3:16 Jesus manifested no interest in any question asked him when before Annas or the Sanhedrists except the one question relative to his bestowal mission. When asked if he were the Son of God, he instantly and unequivocally answered in the affirmative.
 \vs p184 3:17 Annas desired that the trial proceed further, and that charges of a definite nature regarding Jesus’ relation to the Roman law and Roman institutions be formulated for subsequent presentation to Pilate. The councillors were anxious to carry these matters to a speedy termination, not only because it was the preparation day for the Passover and no secular work should be done after noon, but also because they feared Pilate might any time return to the Roman capital of Judea, Caesarea, since he was in Jerusalem only for the Passover celebration.
 \vs p184 3:18 But Annas did not succeed in keeping control of the court. After Jesus had so unexpectedly answered Caiaphas, the high priest stepped forward and smote him in the face with his hand. Annas was truly shocked as the other members of the court, in passing out of the room, spit in Jesus’ face, and many of them mockingly slapped him with the palms of their hands. And thus in disorder and with such unheard\hyp{}of confusion this first session of the Sanhedrist trial of Jesus ended at 4:30.
