Remove an irrelevant footnote.

--- a/tex/p001.tex
+++ b/tex/p001.tex
@@ -7,7 +7,7 @@
 \vs p001 0:5 Urantia mortals can hardly hope to be perfect in the infinite sense, but it is entirely possible for human beings, starting out as they do on this planet, to attain the supernal and divine goal which the infinite God has set for mortal man; and when they do achieve this destiny, they will, in all that pertains to self\hyp{}realization and mind attainment, be just as replete in their sphere of divine perfection as God himself is in his sphere of infinity and eternity. Such perfection may not be universal in the material sense, unlimited in intellectual grasp, or final in spiritual experience, but it is final and complete in all finite aspects of divinity of will, perfection of personality motivation, and God\hyp{}consciousness.
 \vs p001 0:6 This is the true meaning of that divine command, “Be you perfect, even as I am perfect,” which ever urges mortal man onward and beckons him inward in that long and fascinating struggle for the attainment of higher and higher levels of spiritual values and true universe meanings. This sublime search for the God of universes is the supreme adventure of the inhabitants of all the worlds of time and space.
 \usection{1.\bibnobreakspace The Father’s Name}
-\vs p001 1:1 Of all the names by which God the Father is known throughout the universes, those which designate him as the First Source and the Universe Centre are most often encountered. The First Father is known by various names in different universes and in different sectors of the same universe. The names which the creature assigns to the Creator are much dependent on the creature’s concept of the Creator. The First Source and Universe Centre has never revealed himself by name\fnst{\textbf{has never revealed himself by name}, Therefore, it is utter folly to wage war (or even as much as \bibemph{argue}) about the various names of God as some do in their superstitious blindness.}, only by nature. If we believe that we are the children of this Creator, it is only natural that we should eventually call him Father. But this is the name of our own choosing, and it grows out of the recognition of our personal relationship with the First Source and Centre.
+\vs p001 1:1 Of all the names by which God the Father is known throughout the universes, those which designate him as the First Source and the Universe Centre are most often encountered. The First Father is known by various names in different universes and in different sectors of the same universe. The names which the creature assigns to the Creator are much dependent on the creature’s concept of the Creator. The First Source and Universe Centre has never revealed himself by name, only by nature. If we believe that we are the children of this Creator, it is only natural that we should eventually call him Father. But this is the name of our own choosing, and it grows out of the recognition of our personal relationship with the First Source and Centre.
 \vs p001 1:2 The Universal Father never imposes any form of arbitrary recognition, formal worship, or slavish service upon the intelligent will creatures of the universes. The evolutionary inhabitants of the worlds of time and space must of themselves --- in their own hearts --- recognize, love, and voluntarily worship him. The Creator refuses to coerce or compel the submission of the spiritual free wills of his material creatures. The affectionate dedication of the human will to the doing of the Father’s will is man’s choicest gift to God; in fact, such a consecration of creature will constitutes man’s only possible gift of true value to the Paradise Father. In God, man lives, moves, and has his being; there is nothing which man can give to God except this choosing to abide by the Father’s will, and such decisions, effected by the intelligent will creatures of the universes, constitute the reality of that true worship which is so satisfying to the love\hyp{}dominated nature of the Creator Father.
 \vs p001 1:3 When you have once become truly God\hyp{}conscious, after you really discover the majestic Creator and begin to experience the realization of the indwelling presence of the divine controller, then, in accordance with your enlightenment and in accordance with the manner and method by which the divine Sons reveal God, you will find a name for the Universal Father which will be adequately expressive of your concept of the First Great Source and Centre. And so, on different worlds and in various universes, the Creator becomes known by numerous appellations, in spirit of relationship all meaning the same but, in words and symbols, each name standing for the degree, the depth, of his enthronement in the hearts of his creatures of any given realm.
 \vs p001 1:4 \pc Near the centre of the universe of universes, the Universal Father is generally known by names which may be regarded as meaning the First Source. Farther out in the universes of space, the terms employed to designate the Universal Father more often mean the Universal Centre. Still farther out in the starry creation, he is known, as on the headquarters world of your local universe, as the First Creative Source and Divine Centre. In one near\hyp{}by constellation God is called the Father of Universes. In another, the Infinite Upholder, and to the east, the Divine Controller. He has also been designated the Father of Lights, the Gift of Life, and the All\hyp{}powerful One.
