Remove superfluous empty pages at the beginning of four Parts.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1070,7 +1070,7 @@
 }
 
 \newcommand{\parti}{%
-\newpage\thispagestyle{empty}%
+\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partitxt\\\partiup\\[2ex]}
 \begin{center}\subfont\partisub\end{center}%
@@ -1080,7 +1080,7 @@
 }
 
 \newcommand{\partii}{%
-\newpage\thispagestyle{empty}%
+\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partiitxt\\\partiiup\\[2ex]}
 \begin{center}\subfont\partiisub\end{center}%
@@ -1090,7 +1090,7 @@
 }
 
 \newcommand{\partiii}{%
-\newpage\thispagestyle{empty}%
+\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partiiitxt\\\partiiiup\\[2ex]}
 \begin{center}\subfont\partiiisub\end{center}%
@@ -1100,7 +1100,7 @@
 }
 
 \newcommand{\partiv}{%
-\newpage\thispagestyle{empty}%
+\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partivtxt\\\partivup\\[2ex]}
 \begin{center}\subfont\partivsubone\\[2ex]\partivsubtwo\end{center}%
